[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GPS"
version = "0.0.1"
authors = [
  { name="Liz Izhikevich", email="lizhikev@stanford.edu" },
]

description = "Predicting IPv4 services across all ports"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/stanford-esrg/gps"
"Bug Tracker" = "https://github.com/stanford-esrg/gps/issues"
